# tRNA-heatmap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
UofO_yeast_ref/: UofO_sprinzl_mapping.tsv  mito_tRNAs.txt  sacCer3-mature-tRNAs_bwa_subset_biosplints_mito_only.fa
src/tRNAheatmap/: CLI.py  calculate_tRNA_positions.py  heatmap.py  pileup_engine.py  pipeline.py
src/tRNAheatmap/plotting_styles/: default.mplstyle  large_text.mplstyle
test_data/: EColi44IsoacceptorReferenceUnix.fasta  sacCer3-mature-tRNAs_zap_ref.fa
