[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tRNAheatmap"
version = "0.1.0"
description = "Visualize tRNA alignment pileup data as a Sprinzl-coordinate heatmap"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Genome Technology Laboratory" },
]
keywords = ["tRNA", "bioinformatics", "heatmap", "Sprinzl", "nanopore", "pileup"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "pysam",
    "pandas",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/gentechlab/tRNA-heatmap"
Repository = "https://github.com/gentechlab/tRNA-heatmap"

[project.scripts]
tRNAheatmap = "tRNAheatmap.CLI:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tRNAheatmap = ["alignment_cm/*.cm", "plotting_styles/*.mplstyle"]
